# envelope-budget

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  REFACTOR.md  docker-compose.yml  files-to-prompt.sh  pyproject.toml
.github/workflows/: ci.yml
docker/: supervisord.conf
docker/cron/: root
migrations/versions/: 0a9d4dd555ac_initial_migration.py  746aaad7ffa2_add_transactions_and_archived_at.py
src/budget_app/: __init__.py  app.py  cli.py  schemas.py  services.py
src/budget_app/templates/: base.html  index.html  login.html
src/budget_app/templates/partials/: balance.html  envelope_card.html
tests/: test_app.py  test_cli.py  test_cli_entrypoint.py  test_container_config.py  test_schemas.py  test_services.py
